# twenty-dollar

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.full  PRD.md  README.md  docker-compose.full.yml  docker-compose.hub.yml  docker-compose.yml  skills-lock.json
.cargo/: config.toml
.github/workflows/: docker.yml
docs/: agent-recommendations.md  architecture.md  development.md  react-rewrite-prd.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.tsx
frontend/tests/: budget-engine.test.ts
react-v2/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
react-v2/specs/: 01-prd.md  02a-feature-flows.md  02b-feature-data.md  02c-design-direction.md  03a-backend-schema.md  03b-backend-rules.md  04-verification.md  gen.py  report-table-interaction-model.md  report-waterfall-session.md
react-v2/src/: App.tsx  main.tsx
src/: app.rs  error.rs  lib.rs  main.rs
src/db/: accounts.rs  assignments.rs  auth.rs  categories.rs  import_rules.rs  mod.rs  payees.rs  schedules.rs  schema.rs  transactions.rs  transfers.rs  undo.rs
src/handlers/: accounts.rs  auth.rs  budget.rs  categories.rs  import_export.rs  import_rules.rs  mod.rs  payees.rs  preferences.rs  reset.rs  schedules.rs  transactions.rs  transfers.rs  undo.rs
src/middleware/: auth.rs
src/models/: account.rs  assignment.rs  budget.rs  category.rs  import_rule.rs  mod.rs  payee.rs  schedule.rs  transaction.rs  transfer.rs  (+2 more)
tests/: integration.rs
(+215 files in other folders)
